--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top">
       <div class="container">
         <a class="navbar-brand" href="#">
           <img src="images/logo.png" alt="Logo-Brand" class="img-fluid w-50" />
@@ -56,7 +56,7 @@
       <div class="overlay w-100 h-100 d-flex align-items-center justify-content-center">
         <div class="caption text-white text-center">
           <h4>Welcome</h4>
-          <h1 class="my-4 text-uppercase">I'm a graphic designer</h1>
+          <h1 class="my-4 text-capitalize">I'm <span id="typed" class="text-danger"></span></h1>
           <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea cumque inventore a laboriosam,<br /> quae incidunt mollitia quidem rerum magnam perferendis?</p>
           <button class="btn px-4 py-2 border rounded-pill text-white mt-4">Download cv</button>
         </div>
@@ -69,5 +69,7 @@
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/typed.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
