--- a/index.html
+++ b/index.html
@@ -65,6 +65,133 @@
         <i class="rounded-pill"></i>
       </div>
     </header>
+    <!-- =============================== Start About =============================== -->
+    <section id="about" class="py-5">
+      <div class="container">
+        <div class="row py-5">
+          <div class="col-md-6">
+            <img class="img-fluid img-thumbnail" src="images/about.jpg" alt="about">
+          </div>
+          <div class="col-md-6">
+            <div class="about">
+              <h2 class="text-capitalize">About Me</h2>
+              <h3 class="text-capitalize py-1">Hello! <span>I'M Kerri Deo.</span></h3>
+              <p class="text-muted py-1">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+              <p class="text-muted py-1">The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
+              <p class="text-muted py-1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+              <div class="icons">
+                <ul class="list-unstyled">
+                  <li class="d-inline-block">
+                    <a href="#">
+                      <i class="fab fa-dribbble"></i>
+                    </a>
+                  </li>
+                  <li class="d-inline-block pl-2">
+                    <a href="#">
+                      <i class="fab fa-facebook-f"></i>
+                    </a>
+                  </li>
+                  <li class="d-inline-block pl-2">
+                    <a href="#">
+                      <i class="fab fa-linkedin-in"></i>
+                    </a>
+                  </li>
+                  <li class="d-inline-block pl-2">
+                    <a href="#">
+                      <i class="fab fa-twitter"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- =============================== End About =============================== -->
+
+    <!-- =============================== Start Services =============================== -->
+    <section id="services" class="py-5 services">
+      <div class="services py-4">
+        <div class="intro text-center py-4">
+          <h2 class="text-capitalize">Our <strong>Services</strong></h2>
+          <p class="text-muted py-2">It is a long established fact that a reader will be of a page when <br /> established fact looking at its layout.</p>
+        </div>
+        <div class="features text-center pt-5">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4 mb-5">
+                <div class="border rounded px-3 py-4">
+                  <div class="inner">
+                    <div class="icon py-1 pb-3">
+                      <i class="fas fa-chart-line fa-2x"></i>
+                    </div>
+                    <h3 class="text-capitalize position-relative py-3">Graphic Design</h3>
+                    <p class="text-muted py-1">There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                <div class="border rounded px-3 py-4">
+                  <div class="inner">
+                    <div class="icon py-1 pb-3">
+                      <i class="fas fa-mug-hot fa-2x"></i>
+                    </div>
+                    <h3 class="text-capitalize position-relative py-3">Unlimited Color</h3>
+                    <p class="text-muted py-1">There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                <div class="border rounded px-3 py-4">
+                  <div class="inner">
+                    <div class="icon py-1 pb-3">
+                      <i class="fas fa-cloud-upload-alt fa-2x"></i>
+                    </div>
+                    <h3 class="text-capitalize position-relative py-3">Media Marketing</h3>
+                    <p class="text-muted py-1">There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                <div class="border rounded px-3 py-4">
+                  <div class="inner">
+                    <div class="icon py-1 pb-3">
+                      <i class="fas fa-layer-group fa-2x"></i>
+                    </div>
+                    <h3 class="text-capitalize position-relative py-3">Unlimited Wifi</h3>
+                    <p class="text-muted py-1">There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                <div class="border rounded px-3 py-4">
+                  <div class="inner">
+                    <div class="icon py-1 pb-3">
+                      <i class="far fa-object-group fa-2x"></i>
+                    </div>
+                    <h3 class="text-capitalize position-relative py-3">Responsive Design</h3>
+                    <p class="text-muted py-1">There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md-4 mb-5">
+                <div class="border rounded px-3 py-4">
+                  <div class="inner">
+                    <div class="icon py-1 pb-3">
+                      <i class="far fa-edit fa-2x"></i>
+                    </div>
+                    <h3 class="text-capitalize position-relative py-3">Easy to customize</h3>
+                    <p class="text-muted py-1">There are many variations of passages of but the majority have suffered alteration in some form.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- =============================== End Services =============================== -->
 
     <script src="js/jquery-3.5.1.slim.min.js"></script>
     <script src="js/popper.min.js"></script>
